manifests/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yolo-mongo-db
  labels:
    app: yolo-mongo-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yolo-mongo-db
  template:
    metadata:
      labels:
        app: yolo-mongo-db
    spec:
      containers:
      - name: yolo-mongo-db
        image: mongo
        ports:
        - containerPort: 27017

---
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  selector:
    app: mongo
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
